--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "latest",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.16",
+    "@mui/x-date-pickers": "^5.0.9",
+    "@next/font": "^13.0.6",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "i": "^0.3.7",
     "next": "13.0.6",
+    "next-google-fonts": "^2.2.0",
+    "nookies": "^2.5.2",
+    "npm": "^9.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
+    "react-hook-form-mui": "^5.11.0",
+    "sass": "^1.56.1",
     "typescript": "4.9.3"
   }
 }
